--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body {
   margin: 0;
-  height: 90vh;
+  min-height: 90vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -10,14 +10,19 @@ body {
 }
 
 footer {
-  position: absolute;
+  position: fixed;
   bottom: 0;
+  left: 0;
   display: flex;
   justify-content: center;
   align-items: center;
   font-size: 10px;
-  padding: 8px 0;
+  padding: 0.25rem 0;
   color: #fff;
+  background: #000A;
+  width: 100%;
+  backdrop-filter: blur(5px);
+  z-index: 10;
 }
 
 footer a {
@@ -25,6 +30,14 @@ footer a {
   text-decoration: none;
   font-weight: bold;
   padding: 0 4px;
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  max-width: 900px;
 }
 
 .header {
@@ -51,19 +64,19 @@ footer a {
 .quiz-container {
   margin: 2rem auto;
   background: #ffffff;
-  padding: 3rem 8rem;
   gap: 3rem;
   border-radius: 0.5rem;
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 30vw;
+  padding: 2rem 1rem;
+  width: 85%;
 }
 
 #flag-display img {
   border-radius: 0.5rem;
-  height: 250px;
-  width: auto;
+  max-height: 250px;
+  width: 100%;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
 }
 
@@ -71,6 +84,7 @@ footer a {
   display: flex;
   flex-direction: column;
   width: 100%;
+  max-width: 400px;
   gap: 0.5rem;
 }
 
